--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,7 @@ body {
 
 body {
   color: var(--font-color);
-  font-family: var('--font-lato');
+  font-family: var(--font-lato);
   background: var(--secondary-light);
   min-height: 100vh;
 }
